Add burgermenu and off-canvas

--- a/index.html
+++ b/index.html
@@ -27,17 +27,35 @@
 
 <body>
 
-<nav class="navbar navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header pull-right">
-            <a class="navbar-brand" href="#">Advice digital logo</a>
-        </div>
-    </div>
-</nav>
-
 <div class="cta">
     <p><a href="#">CTA kasse</a></p>
 </div>
+
+<header class="nav-down">
+    <nav class="navbar" role="navigation">
+        <div class="container">
+            <div class="navbar-header pull-left">
+                <div class="menu toggle-nav">
+                    <span class="menu-global menu-top"></span>
+                    <span class="menu-global menu-middle"></span>
+                    <span class="menu-global menu-bottom"></span>
+                </div>
+            </div>
+            <div class="navbar-header pull-right">
+                <img src="assets/images/ad_logo_m_navn.svg" alt="logo" />
+            </div>
+        </div>
+    </nav>
+</header>
+
+<div id="site-wrapper">
+<div id="site-canvas">
+
+<div id="site-menu">
+    <div class="menu-content">
+        <h4>Fire korte sætninger om casen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party.</h4>
+    </div>
+</div><!-- /.sitemenu -->
 
 <div class="container text-center">
 
@@ -146,6 +164,8 @@
 
 </div><!-- /.container -->
 
+</div><!-- /.sitecanvas -->
+</div><!-- /.sitewrapper -->
 
 <!-- JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -155,6 +175,8 @@
 <script>
     new WOW().init();
 </script>
+<!-- Custom JS -->
+<script src="assets/javascripts/custom.js"></script>
 
 </body>
 </html>
