--- a/index.html
+++ b/index.html
@@ -48,135 +48,161 @@
     </nav>
 </header>
 
-<div id="site-wrapper">
-<div id="site-canvas">
+<nav>
+    <ul>
+        <li>
+            <a href="#" class="slider">1</a>
+        </li>
+        <li>
+            <a href="#" class="slider">2</a>
+        </li>
+        <li>
+            <a href="#" class="slider">3</a>
+        </li>
+        <li>
+            <a href="#" class="slider">4</a>
+        </li>
+        <li>
+            <a href="#" class="slider">5</a>
+        </li>
+    </ul>
+</nav>
 
-<div id="site-menu">
-    <div class="menu-content">
-        <h4>Fire korte sætninger om casen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party.</h4>
-    </div>
-</div><!-- /.sitemenu -->
+<div id="wrapper" class="slide0">
 
-<div class="container text-center">
+    <div class="container text-center">
 
-    <div class="start">
-        <div class="row">
-            <div class="col-sm-12 hero">
-                <h1>Hero tekst også kendt som "Kick ass sætning"</h1>
-                <p>Fire korte sætninger om casen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
-            </div>
-        </div>
-
-        <div class="about">
+    <div class="main-container" style="background-color:grey">
+        <div class="start">
             <div class="row">
-                <div class="introduction wow fadeInUp" data-wow-delay="1s">
-                    <h2>Introduktion</h2>
-                    <p>To korte sætninger om introduktionen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                <div class="col-sm-12 hero">
+                    <h1>Hero tekst også kendt som "Kick ass sætning"</h1>
+                    <p>Fire korte sætninger om casen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
                 </div>
             </div>
 
-            <div class="challenge wow fadeInUp" data-wow-delay="1s">
+            <div class="about">
                 <div class="row">
-                    <h2>Udfordring</h2>
-                    <p>To korte sætninger om udfordringen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                    <div class="introduction wow fadeInUp" data-wow-delay="1s">
+                        <h2>Introduktion</h2>
+                        <p>To korte sætninger om introduktionen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                    </div>
+                </div>
+
+                <div class="challenge wow fadeInUp" data-wow-delay="1s">
+                    <div class="row">
+                        <h2>Udfordring</h2>
+                        <p>To korte sætninger om udfordringen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                    </div>
+                </div>
+
+                <div class="solution wow fadeInUp" data-wow-delay="1s">
+                    <div class="row">
+                        <h2>Løsning</h2>
+                        <p>To korte sætninger om løsningen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
 
-            <div class="solution wow fadeInUp" data-wow-delay="1s">
-                <div class="row">
-                    <h2>Løsning</h2>
-                    <p>To korte sætninger om løsningen... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+    <div class="main-container" style="background-color:red">
+        <div class="process">
+            <div class="strategy row">
+                <div class="col-sm-6">
+                    <h2>Koncept</h2>
+                    <p>To korte sætninger om strategien... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                </div>
+                <div class="col-sm-6">
+                    <div class="strategy-image wow fadeIn" data-wow-delay="1s"></div>
+                </div>
+            </div>
+            <div class="test row">
+                <div class="col-sm-6">
+                    <div class="test-image wow fadeIn" data-wow-delay="1s"></div>
+                </div>
+                <div class="col-sm-6">
+                    <h2>Begrundelse</h2>
+                    <p>To korte sætninger om test... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                </div>
+            </div>
+            <div class="design row">
+                <div class="col-sm-6">
+                    <h2>Design</h2>
+                    <p>To korte sætninger om designet... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+                </div>
+                <div class="col-sm-6">
+                    <div class="design-image wow fadeIn" data-wow-delay="1s"></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="process">
-        <div class="strategy row">
-            <div class="col-sm-6">
-                <h2>Koncept</h2>
-                <p>To korte sætninger om strategien... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
+    <div class="main-container" style="background-color:green">
+        <div class="product">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Resultatet</h2>
+                </div>
             </div>
-            <div class="col-sm-6">
-                <div class="strategy-image wow fadeIn" data-wow-delay="1s"></div>
-            </div>
-        </div>
-        <div class="test row">
-            <div class="col-sm-6">
-                <div class="test-image wow fadeIn" data-wow-delay="1s"></div>
-            </div>
-            <div class="col-sm-6">
-                <h2>Begrundelse</h2>
-                <p>To korte sætninger om test... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
-            </div>
-        </div>
-        <div class="design row">
-            <div class="col-sm-6">
-                <h2>Design</h2>
-                <p>To korte sætninger om designet... Scenester art party you probably haven't heard of them Odd Future. Meditation cardigan salvia, roof party McSweeney's drinking vinegar fixie XOXO freegan polaroid brunch Cosby sweater next level disrupt. Distillery pickled gastropub, cred meditation 90's next level Schlitz cold-pressed church-key dreamcatcher. </p>
-            </div>
-            <div class="col-sm-6">
-                <div class="design-image wow fadeIn" data-wow-delay="1s"></div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="product-image wow fadeInUp" data-wow-delay="1s"></div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="product-image wow fadeInUp" data-wow-delay="1s"></div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="product-image wow fadeInUp" data-wow-delay="1s"></div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="product">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>Resultatet</h2>
+    <div class="main-container" style="background-color:blue">
+        <div class="team">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Projektholdet</h2>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="product-image wow fadeInUp" data-wow-delay="1s"></div>
-            </div>
-            <div class="col-sm-4">
-                <div class="product-image wow fadeInUp" data-wow-delay="1s"></div>
-            </div>
-            <div class="col-sm-4">
-                <div class="product-image wow fadeInUp" data-wow-delay="1s"></div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="team-image wow fadeInUp"></div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-image wow fadeInUp"></div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-image wow fadeInUp"></div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-image wow fadeInUp"></div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="team">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>Projektholdet</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <div class="team-image wow fadeInUp"></div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-image wow fadeInUp"></div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-image wow fadeInUp"></div>
-            </div>
-            <div class="col-sm-3">
-                <div class="team-image wow fadeInUp"></div>
-            </div>
-        </div>
+    <div class="main-container" style="background-color:yellow">
+        <h1>Halløj</h1>
     </div>
+
 
 </div><!-- /.container -->
+</div><!-- /#wrapper -->
 
-</div><!-- /.sitecanvas -->
-</div><!-- /.sitewrapper -->
 
 <!-- JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="assets/javascripts/bootstrap.js"></script>
-<!-- WOW Animate -->
+<!-- WOW Animate
 <script src="assets/wowanimate/dist/wow.min.js"></script>
 <script>
     new WOW().init();
-</script>
-<!-- Custom JS -->
-<script src="assets/javascripts/custom.js"></script>
+</script> -->
+<!-- Custom JS
+<script src="assets/javascripts/custom.js"></script> -->
+<script src="assets/javascripts/slide.js"></script>
 
 </body>
 </html>
